tests/errmsgs/t19225.nim
discard """
  errormsg: "module has no type: sequtils"
"""


import std/sequtils; sequtils